--- a/CSS/style.css
+++ b/CSS/style.css
@@ -133,6 +133,14 @@ button
     padding: 2px 0px 2px 0px;
     background-color: rgba(0, 0, 0, 0.5);
 }
+#upgradeSpot .infoIcon
+{
+    font-size: 10px;
+}
+#upgradeSpot .infoBtn
+{
+    padding: 1px 4px 1px 4px;
+}
 #upgradeSpot .btnGroup
 {
     width: 390px;
