--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 /* GENERAL */
 body
 {
-    background: url("IMGS/csgo2.jpg");
+    background: url("IMGS/blackBackground.jpg");
     /*font-style:*/
     font-size: 20px;
     color: white;
@@ -31,6 +31,14 @@ div .row
 {
     float: left;
 }
+.infoBtnUpg
+{
+    padding: 1px 4px 1px 4px;
+}
+.infoIcon
+{
+    font-size: 10px;
+}
 h1
 {
     font-size: 30px;
@@ -39,6 +47,21 @@ h1
 button
 {
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
+}
+.modal-content
+{
+    background: url("IMGS/popUpBackground3.jpg");
+    /*z-index: 1;
+    position:absolute;
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px black;
+    background: url("IMGS/popUpBackgroundResized.jpg");
+    text-align: center;
+    width: 1280px;
+    height: 750px;
+    margin-left: 315px;
+    margin-top: 85px;*/
 }
 /* COOKIE SPOT */
 
@@ -132,14 +155,6 @@ button
     height: 42px;
     padding: 2px 0px 2px 0px;
     background-color: rgba(0, 0, 0, 0.5);
-}
-#upgradeSpot .infoIcon
-{
-    font-size: 10px;
-}
-#upgradeSpot .infoBtn
-{
-    padding: 1px 4px 1px 4px;
 }
 #upgradeSpot .btnGroup
 {
