Medium update (Ajouts de moreUpgBtn avec popup à fix)

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -199,3 +199,8 @@ button
     border: 1px solid rgba(0, 0, 0, 0.0);
     margin-left: 75px;
 }
+#upgradeSpot .moreUpgBtn
+{
+    color: #aaa !important;
+    margin-left: 10px;
+}
