--- a/CSS/style.css
+++ b/CSS/style.css
@@ -63,6 +63,65 @@ button
     margin-left: 315px;
     margin-top: 85px;*/
 }
+/* FOOTER */
+
+.navbar
+{
+    background: rgba(0,0,0, 0.7);
+    font-size: 12px;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+.navbar .navbar-nav
+{
+    display: inline-block;
+    float: none;
+    vertical-align: top;
+}
+.navbar .navbar-collapse
+{
+    text-align: center;
+}
+.navbar li a
+{
+    color: #fff !important;
+}
+.navbar-nav li a:hover, .navbar-nav li.active a
+{
+    color: black !important;
+    background-color: #fff !important;
+}
+.navbar-default .navbar-toggle
+{
+    border-style: none;
+}
+.icon-bar
+{
+    background-color: #fff !important;
+}
+
+/*footer
+{
+    background: #333;
+    padding: 20px 0 40px;
+}
+footer .glyphicon
+{
+    font-size:  25px;
+    margin: 20px;
+    color: #50C0E0;
+    height: 30px;
+}
+footer .glyphicon:hover
+{
+    font-size:  27px;
+}
+footer h5
+{
+    color: #fff;
+    font-weight: normal;
+}*/
 /* COOKIE SPOT */
 
 #caseSpot
