--- a/CSS/style.css
+++ b/CSS/style.css
@@ -243,12 +243,14 @@ footer h5
 }
 #caseSpot .yourBalance, .yourBalanceSec, .yourBalanceClick
 {
-    background: url("IMGS/achievementBackground.jpg");
-    border: 1px solid rgba(0, 0, 0, 0.8);
+    background: #232626;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 4px 0px 4px 0px;
     text-align: center;
     width: 100%;
+    box-shadow: 2px 2px 2px black;
+    background: rgba(35, 38, 38, 0.8);
 }
 #caseSpot .caseNumber
 {
@@ -292,7 +294,240 @@ footer h5
 }
 
 /* achievement SPOT */
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+@media screen and (min-width: 736px) {
+    .achievement-banner {
+      opacity: 0;
+      font-size: 350%;
+      width: 10em;
+    	color: #efefef;
+    	background: url("IMGS/achievementBackground.jpg");
+    	border-radius: 10em;
+    	position: absolute;
+      padding: .125em;
+      min-height: 1.5em;
+      overflow: hidden;
+      z-index: 1;
+      margin-left: 32%;
+      bottom: 6%;
+    }
+}
+.achievement-banner {
+  opacity: 0;
+  font-size: 350%;
+  width: 10em;
+	color: #efefef;
+	background: url("IMGS/achievementBackground.jpg");
+	border-radius: 10em;
+	position: absolute;
+  padding: .125em;
+  min-height: 1.5em;
+  overflow: hidden;
+  z-index: 1;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.7);
+}
+.achievement-banner .achievement-icon {
+	border-radius: 10em;
+	position: relative;
+  background: #000;
+  border: .125em solid #F5C4C3;
+	border-top-color: #45ca3d;
+  height: 1.25em;
+  width: 1.25em;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  z-index: 100;
+}
+.achievement-banner .achievement-icon .icon {
+  display: block;
+  border-radius: 10em;
+  border: 4px solid #000;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1em;
+  height: 1em;
+  line-height: 1;
+  z-index: 1000;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.achievement-banner .achievement-icon .icon .icon-trophy {
+  font-size: 75%;
+  line-height: 1;
+  position: relative;
+  top: -.125em;
+}
+.achievement-banner .achievement-text {
+	font-family: "Trebuchet MS";
+  text-shadow: 0 2px 0 #000;
+  position: absolute;
+  top: .5em;
+  left: 4em;
+  font-size: 50%;
+  line-height: 1;
+  width: 400%;
+}
+.achievement-banner .achievement-notification {
+  margin: 0;
+}
+.achievement-banner .achievement-name {
+  margin: 0;
+  padding-top: 5px;
+  font-size: 70%;
+  color: #ccc;
+}
 
+/* Generated content */
+.achievement-banner .achievement-icon:before,
+.achievement-banner .achievement-icon:after,
+.achievement-banner .achievement-icon .icon:before,
+.achievement-banner .achievement-icon .icon:after {
+	content: "";
+	display: block;
+	position: absolute;
+}
+
+.achievement-banner .achievement-icon:before{
+  border-radius: 12em;
+  z-index: -100;
+  background: transparent;
+  border: 4px solid #000;
+  top: -.175em;
+  left: -.175em;
+  right: -.175em;
+  bottom: -.175em;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+/* Bars */
+.achievement-banner .achievement-icon .icon:before,
+.achievement-banner .achievement-icon .icon:after {
+  width: 150%;
+  height: .125em;
+  background: #000;
+  border-radius: .05em;
+  z-index: -10;
+  top: 42.5%;
+  left: -25%;
+}
+
+.achievement-banner .achievement-icon .icon:before {
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+
+/* Animations */
+
+/* open-close-banner */
+@-webkit-keyframes open-close-banner {
+  0% {width: 1.5em; opacity: 0;}
+  2% {width: 1.5em; opacity: 1;}
+  8% {width: 10em;}
+  80% {width: 10em;}
+  90% {width: 1.5em; opacity: 1;
+    -webkit-transform: rotate(0deg);
+  }
+  98% {
+    width: 1.5em;
+    -webkit-transform: rotate(720deg);
+  }
+  100% {width: 1.5em; opacity: 0;}
+}
+@-moz-keyframes open-close-banner {
+  0% {width: 1.5em; opacity: 0;}
+  2% {width: 1.5em; opacity: 1;}
+  8% {width: 10em;}
+  80% {width: 10em;}
+  90% {
+    width: 1.5em;
+    opacity: 1;
+    -moz-transform: rotate(0deg);
+  }
+  98% {
+    width: 1.5em;
+    -moz-transform: rotate(720deg);
+  }
+  100% {width: 1.5em; opacity: 0;}
+}
+@keyframes open-close-banner {
+  0% {width: 1.5em; opacity: 0;}
+  2% {width: 1.5em; opacity: 1;}
+  8% {width: 10em;}
+  80% {width: 10em;}
+  90% {
+    width: 1.5em;
+    opacity: 1;
+    transform: rotate(0deg);
+  }
+  98% {
+    width: 1.5em;
+    transform: rotate(720deg);
+  }
+  100% {width: 1.5em; opacity: 0;}
+}
+
+/* border-top-pulse */
+@-webkit-keyframes border-top-pulse {
+  0% {border-top-color: #F5C4C3;}
+  40% {border-top-color: #ffffff;}
+  80% {border-top-color: #00ff00;}
+  100% {border-top-color: #45ca3d;}
+}
+@-moz-keyframes border-top-pulse {
+  0% {border-top-color: #F5C4C3;}
+  40% {border-top-color: #ffffff;}
+  80% {border-top-color: #00ff00;}
+  100% {border-top-color: #45ca3d;}
+}
+@keyframes border-top-pulse {
+  0% {border-top-color: #F5C4C3;}
+  40% {border-top-color: #ffffff;}
+  80% {border-top-color: #00ff00;}
+  100% {border-top-color: #45ca3d;}
+}
+@-webkit-keyframes fade-in-text {
+  0% {opacity: 0;}
+  80% {opacity: 0;}
+  100% {opacity: 1;}
+}
+@-moz-keyframes fade-in-text {
+  0% {opacity: 0;}
+  80% {opacity: 0;}
+  100% {opacity: 1;}
+}
+@keyframes fade-in-text {
+  0% {opacity: 0;}
+  80% {opacity: 0;}
+  100% {opacity: 1;}
+}
+.achievement-banner {
+  -webkit-animation: open-close-banner 5s 1;
+  -moz-animation: open-close-banner 5s 1;
+  animation: open-close-banner 5s 1;
+}
+
+.achievement-banner .achievement-icon {
+  /* Make border-top pulse. */
+  -webkit-animation: border-top-pulse 1.25s 2;
+  -moz-animation: border-top-pulse 1.25s 2;
+  animation: border-top-pulse 1.25s 2;
+}
+/* fade-in-text */
+.achievement-banner .achievement-text {
+  -webkit-animation: fade-in-text .5s 1;
+  -moz-animation: fade-in-text .5s 1;
+  animation: fade-in-text .5s 1;
+}
 #achievementSpot
 {
     height: 821px;
@@ -377,9 +612,10 @@ footer h5
 {
     padding: 3px 0px 3px 0px;
     text-align: center;
-    border: 1px solid rgba(0, 0, 0, 0.3);
+    border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    background: url("IMGS/achievementBackground.jpg");
+    box-shadow: 2px 2px 2px black;
+    background: rgba(35, 38, 38, 0.8);
 }
 .divider
 {
