--- a/CSS/styleHome.css
+++ b/CSS/styleHome.css
@@ -212,9 +212,9 @@ button
     border: 1px solid rgba(0,0,0,0.2);
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.0);
     border-radius: 5px;
-    background: rgba(0,0,0,0.0);
+    background: white;
     margin-bottom: 2px;
-    width: 300px;
+    width: 65%;
 }
 .balanceBox
 {
@@ -232,7 +232,7 @@ button
     border-radius: 5px;
     background: rgba(0, 0, 0, 0.50);
     margin: 5px 5px;
-    width: 350px;
+    width: 90%;
 }
 #clickerSpotInfo .clickerSpotText
 {
