--- a/CSS/styleHome.css
+++ b/CSS/styleHome.css
@@ -158,7 +158,7 @@ button
     padding: 2px 0px 2px 0px;
     background-color: rgba(0, 0, 0, 0.50);
     border-radius: 20px;
-    height: 44em;
+    height: 43em;
 }
 #userSpot .adSpot
 {
@@ -216,7 +216,7 @@ button
     border: 1px solid rgba(0,0,0,0.2);
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.0);
     border-radius: 5px;
-    background: rgba(0,0,0,0.0);
+    background: white;
     margin-bottom: 2px;
     width: 50%;
 }
