--- a/CSS/style.css
+++ b/CSS/style.css
@@ -201,7 +201,7 @@ footer h5
 {
     color: white;
     position: absolute;
-    margin-left: 290px;
+    margin-left: 46%;
     top: 340px;
     z-index: 1;
     cursor: pointer;
@@ -210,7 +210,7 @@ footer h5
 {
     color: white;
     position: absolute;
-    margin-left: 290px;
+    margin-left: 46%;
     top: 340px;
     z-index: 1;
     cursor: pointer;
