--- a/CSS/styleMember.css
+++ b/CSS/styleMember.css
@@ -173,8 +173,8 @@ button
 }
 #userSpot .adSpotContainer
 {
-    /*margin-top: 0%; If connected*/
-    margin-top: 75%; /*If not connected*/
+     /*If connected*/
+    /*margin-top: 75%; If not connected*/
 }
 #userSpot
 {
@@ -213,13 +213,12 @@ button
 }
 .tradeLinkBox
 {
-    margin-left: 18%;
     border: 1px solid rgba(0,0,0,0.2);
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.0);
     border-radius: 5px;
     background: white;
     margin-bottom: 2px;
-    width: 50%;
+    width: 66%;
 }
 .balanceBox
 {
@@ -265,4 +264,8 @@ button
     border: 1px solid rgba(0, 0, 0, 0.3);
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
+}
+.saveTradeLinkBtn
+{
+    margin: 2% 2%;
 }
